<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Cater-Pillar KOT</string>
    <string name="app_launcher_name">cpKOT Test</string>
    <string name="app_name">cpKOT Test</string>
    <string name="home">cpKOT - Home</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="enter">Enter</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="invalidLogin">Invalid Username/Password</string>
    <string name="serviceError">Service Unavailable</string>
    <string name="logout">Logout</string>
    <string name="outlets">Outlets</string>
    <string name="tables">Tables</string>
    <string name="kotEntry">KOT Entry</string>
    <string name="settings">Settings</string>
    <string name="fav">FAV</string>
    <string name="slNo">\#</string>
    <string name="desc">Desc.</string>
    <string name="description">Description</string>
    <string name="qty">Qty.</string>
    <string name="rate">Rate</string>
    <string name="ipAddress">IP Address of KOT Server</string>
    <string name="exampleIp">eg: 192.168.2.34</string>
    <string name="tableId">Table ID</string>
    <string name="sNo">SNo.</string>
    <string name="kotNo">KOT #</string>
    <string name="kotRefNo">KOT Ref. #</string>
    <string name="time">Time</string>
    <string name="itemId">Item ID</string>
    <string name="value">Value</string>
    <string name="total">Total</string>
    <string name="printBill">Print Bill</string>
    <string name="printKot">Print KOT</string>
    <string name="deleteEntry">Delete Entry</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="del">Del</string>
    <string name="print">Print</string>
    <string name="close">Close</string>
    <string name="bill">Bill</string>
    <string name="tabletId">Tablet ID</string>
    <string name="footerText">© Think42Labs Pvt. Ltd.</string>
    <string name="footerText1">© Cater-Pillar Software.</string>
</resources>
